package com.cpp.project.course.entity;

import com.cpp.project.common.entity.TaskStatus;

import java.time.Instant;
import java.util.UUID;

/**
 * Builder Pattern for CourseTask entity
 */
public class CourseTaskBuilder {
    private UUID courseId;
    private String name;
    private String description;
    private Instant deadline;
    private int progress = 0;
    private TaskStatus status = TaskStatus.PENDING;

    public CourseTaskBuilder courseId(UUID courseId) {
        this.courseId = courseId;
        return this;
    }

    public CourseTaskBuilder name(String name) {
        this.name = name;
        return this;
    }

    public CourseTaskBuilder description(String description) {
        this.description = description;
        return this;
    }

    public CourseTaskBuilder deadline(Instant deadline) {
        this.deadline = deadline;
        return this;
    }

    public CourseTaskBuilder progress(int progress) {
        this.progress = progress;
        return this;
    }

    public CourseTaskBuilder status(TaskStatus status) {
        this.status = status;
        return this;
    }

    public CourseTask build() {
        CourseTask task = new CourseTask();
        task.setCourseId(courseId);
        task.setName(name);
        task.setDescription(description);
        task.setDeadline(deadline);
        task.setProgress(progress);
        task.setStatus(status != null ? status : TaskStatus.PENDING);
        return task;
    }
}
